# suigetsukan-lambdas

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  README.md  mypy-lambdas.ini  pyproject.toml  requirements-dev.txt
.cursor/: .cursor-settings  .markdownlint.json  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/.github/: orgs-to-update.txt
.cursor/docs/: CHANGELOG.md
.cursor/rules/: apple-compliance.mdc  aws-context.mdc  c-misra-safety.mdc  ci-deploy-verify.mdc  code-quality.mdc  commit-and-push.mdc  esp-idf-boundaries.mdc  file-organization.mdc  prefer-libraries.mdc  python-flutter-ts.mdc  repository-boundaries.mdc  security.mdc
.cursor/scripts/: install-org.sh  install.sh  remove-bats-from-org-repos.sh  validate_mdc.py
.cursor/tests/: install.bats  test_validate_mdc.py
.github/schemas/: lambda-config.schema.json
.github/scripts/: deploy_lambdas.py  set_flags.py  (+5 more)
common/: __init__.py  aikido_mappings.py  battodo_mappings.py  constants.py  danzan_ryu_mappings.py
docs/: CODING_GUIDELINES.md  FILE_NAMING_CONVENTIONS.md  README.md  SECRETS_AND_ENV_VARS.md  TECHNIQUE_TO_FILENAME_REFERENCE.md
infra/: aws-backup-dynamodb.yaml
scripts/: check_quality.sh  install-pre-commit.sh  migrate_lambda_repos.sh  org-secrets.env.example  run_analytics_report.sh  run_tests.sh  setup_aws_backup_dynamodb.py  setup_execution_role.sh  setup_log_watcher_table.py  setup_usage_api_gateway.py  test_then_push.sh
tests/: conftest.py  test_analytics_report.py  test_billing_rest_api.py  test_cognito_backup.py  test_cognito_post_confirmation.py  test_cognito_rest_api.py  test_common_mappings.py  test_constants.py  test_contributor_submission_manager.py  test_file_name_decipher.py  test_log_janitor.py  test_log_watcher.py  test_log_watcher_enroller.py  test_setup_aws_backup_dynamodb.py  test_usage_rest_api.py  test_utils.py  test_validate_lambda_configs.py
(+51 files in other folders)
