[project]
name = "suigetsukan-lambdas"
version = "0.1.0"
description = "Suigetsukan AWS Lambda functions"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".git", ".venv", "__pycache__", "*.zip"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "W",      # pycodestyle warnings
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "BLE",    # flake8-blind-except
    "S",      # flake8-bandit (security)
    "C90",    # mccabe complexity
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "S101",   # assert - allow in tests
    "S104",   # bind all interfaces - not applicable
    "S311",   # random - allow for non-crypto use
    "S603",   # subprocess - scripts need it
    "S604",   # subprocess shell=True - deploy uses it
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "S106", "F401", "B007"]  # assert OK, unused args/imports in tests
".github/scripts/*" = ["S602", "S608", "C901"]  # subprocess shell, IoT SQL, deploy complexity
"lambdas/*/app.py" = ["ARG001"]  # lambda handler context param required by runtime

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
ignore_missing_imports = true
exclude = ["lambdas/"]  # duplicate app module names; type-check common + scripts

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101", "B602", "B608"]  # assert; subprocess shell (deploy); IoT SQL (not DB)
